# pdf-transcriber

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/pdf_transcriber/: __init__.py  cleanup.py  cli.py  config.py  event_types.py  events.py  server.py
src/pdf_transcriber/core/: __init__.py  engine_cache.py  metadata_parser.py  pdf_processor.py  slugs.py  state_manager.py  transcription.py  verification.py
src/pdf_transcriber/core/linter/: __init__.py  engine.py  models.py
src/pdf_transcriber/core/linter/rules/: __init__.py  artifacts.py  html.py  html_math.py  markdown.py  math.py  math_constants.py  math_unicode.py
src/pdf_transcriber/resources/: paper_resources.py
src/pdf_transcriber/skills/: __init__.py  transcribe.md
src/pdf_transcriber/tools/: __init__.py  lint.py  list_papers.py  metadata.py  search.py  transcribe.py
src/pdf_transcriber/tui/: __init__.py  dashboard.py  discovery.py  metrics.py
tests/: test_cleanup.py  test_events.py
